style.css
body {
    font-family: 'Karla', sans-serif;
    background-color: #030303;
    color: #eaece5;
    margin: 0 !important;
}

header h1, header h3{
    user-select: none;
    margin: 0;
}

.logo {
    position: absolute;
    left: 5px;
    top: 5px;
}

.buttons {
    display: flex;
    align-items: center;
    position: absolute;
    right: 5px;
    top: 5px;
}

.buttons a {
    margin: 0 0 0 20px;
    text-decoration: none;
    color: inherit;
}

.buttons a:hover:not(.currentPage) {
    cursor: pointer;
    text-decoration: underline;
}

.currentPage {
    user-select: none;
    font-weight: 700;
}

#results {
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#drop {
    margin: 40vh 0 0 0;
}

#dropText {
    user-select: none;
    cursor: pointer;
}

#dropInput {
    opacity: 0;
    height: 0;
}

#section {
    display: flex;
    flex-direction: column;
    margin: 20px 0 0 0;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.post {
    border: 1px solid #404040;
    width: 600px;
    display: flex;
    flex-direction: column;
    background-color: #1a1a1b;
    border-radius: 10px;
    padding: 5px;
    text-align: left;
    margin: 0 0 20px 0;
}

.post:hover {
    border: 1px solid #808080;
}

.post h2 {
    font-size: 1.2em;
    margin: 0 0 10px 0;
}

.post *, .inputSection * {
    max-width: 100%;
    height: auto;
}

@media (max-width: 800px) {
    .post {
        width: 90vw;
    }
}

/* Blend Specific */

#inputs {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.inputSection {
    margin: 10px;
    background-color: #1a1a1b;
    width: 300px;
    padding: 10px;
}

.button{
    margin: 0 10px 0 10px;
    font-size: 1.5em;
    border: 0;
    font-family: inherit;
    width: 100px;
    background-color: #1a1a1b;
    color: #eaece5;
    padding: 10px;
}

.button:hover {
    cursor: pointer;
}

.selectedButton {
    background-color: #eaece5 !important;
    color: #1a1a1b !important;
}

#blendOutput {
    display: flex;
    justify-content: center;
    width: 600px;
}

#blendOutput img{
    margin: 10px;
    max-width: 100%;
}

.bucketHolder {
    display: flex;

}

.bucket {
    border: 1px solid #404040;
    width: 100px;
    cursor: pointer;
    margin: 0 20px 20px 0;
}

.bucket:hover {
    border-color: #eaece5;
}

.copy {
    user-select: none;
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    visibility: hidden;
    font-weight: 700;
}

.colorName {
    font-weight: 700;
    text-transform: uppercase;
}

